hphp/hack/test/typecheck/union/shape_idx_refine.php.exp
File "shape_idx_refine.php", line 17, characters 10-11:
Invalid return type (Typing[4110])
File "shape_idx_refine.php", line 4, characters 24-26:
Expected int
File "shape_idx_refine.php", line 14, characters 23-25:
But got nonnull
File "shape_idx_refine.php", line 30, characters 12-13:
Invalid return type (Typing[4110])
File "shape_idx_refine.php", line 4, characters 24-26:
Expected int
File "shape_idx_refine.php", line 29, characters 23-25:
But got nonnull
